deploy/env/develop/sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sirius
spec:
  template:
    spec:
      containers:
        - name: opa
          image: w6dio/opa
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data/opa
              name: config-opa
              readOnly: true
      volumes:
        - configMap:
            defaultMode: 420
            name: sirius-opa-config
          name: config-opa
