deploy/env/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    externaldns: disabled
  name: sirius
spec:
  ingressClassName: ing-w6d
  rules:
    - host: www2.dev.w6d.io
      http:
        paths:
          - backend:
              service:
                name: sirius
                port:
                  number: 8080
            pathType: Prefix
            path: /api/iam/project/
          - backend:
              service:
                name: sirius
                port:
                  number: 8080
            pathType: Prefix
            path: /api/iam/organisation/
          - backend:
              service:
                name: sirius
                port:
                  number: 8080
            pathType: Prefix
            path: /api/iam/scope/
  tls:
    - hosts:
        - www2.dev.w6d.io
